--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Hrishi | Portfolio"
+      name="Akash | Portfolio"
       content="Web site created using create-react-app"
     />
-    <meta property="og:title" content="Hrishi | Portfolio" />
+    <meta property="og:title" content="Akash | Portfolio" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://hrishi1999.github.io/" />
+    <meta property="og:url" content="https://akash-10-23.github.io/" />
 
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
